# SymbolicRegressionToolkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml
1.5.0/: 404.html
1.5.0/changelog/: index.html
1.5.0/references/: index.html
1.5.0/references/approaches/: index.html
1.5.0/references/dataset/: index.html
1.5.0/references/evaluation/: index.html
1.5.0/references/experiments/: index.html
1.5.0/references/utils/: index.html
1.5.0/search/: search_index.json
PESR/: SR_evaluator.py  parameter_estimator.py  symbol_library.py  utils.py
SRToolkit/: SR_evaluator.py  __init__.py  parameter_estimator.py  symbol_library.py  utils.py
SRToolkit/approaches/: EDHiE.py  ProGED.py  __init__.py  sr_approach.py
SRToolkit/bundle/: __init__.py  _install.py  _manifest.py  _pack.py  _relocate.py  _store.py
SRToolkit/dataset/: __init__.py  data_cache.py  data_source.py  feynman.py  nguyen.py  sampling.py  sr_benchmark.py  sr_dataset.py  srbenchmark.py  srdataset.py  srsd_feynman.py
SRToolkit/evaluation/: __init__.py  callbacks.py  parameter_estimator.py  result_augmentation.py  sr_evaluator.py
SRToolkit/experiments/: __init__.py  __main__.py  experiment_grid.py
SRToolkit/utils/: __init__.py  _eval_cython.py  _eval_cython.pyx  expression_compiler.py  expression_generator.py  expression_simplifier.py  expression_tree.py  measures.py  serialization.py  symbol_library.py  symbolic_math.py  types.py
SRToolkit/utils/grammar/: __init__.py  (+3 more)
changelog/: index.html
data/: aaai_spring_example.csv  test_exprs.txt  test_exprs_100k.txt
docs/: citations.md
docs/guides/: benchmarking.md  custom-approach.md  custom-dataset.md  experiments.md  expression-manipulation.md  grammars.md  index.md  quickstart.md  sharing.md
docs/references/: index.md
examples/: ProGED_with_callbacks_and_res_augmenters.py  SR_evaluation.py  SR_evaluation_minimal_example.py  customization.py  experiments_and_ExperimentGrid_example.py  parameter_estimation_example.py  parameter_estimation_minimal_example.py
latest/: 404.html  index.html  objects.inv
latest/changelog/: index.html
latest/citations/: index.html
latest/guides/: index.html
latest/references/: index.html
latest/search/: search_index.json
references/: index.html
references/approaches/: index.html
references/dataset/: index.html
references/evaluation/: index.html
references/experiments/: index.html
references/utils/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_benchmarks.py  test_expression_compiler.py  test_expression_generator.py  test_expression_simplifier.py  test_expression_tree.py  test_measures.py  test_parameter_estimator.py  test_result_augmentation.py  test_sr_dataset.py  test_sr_evaluator.py  test_symbol_library.py  test_types.py
tests/evaluation/: test_callbacks.py  test_parameter_estimator.py  test_result_augmentation.py  test_sr_evaluator.py
tests/utils/: test_eval_cython.py  test_expression_generator.py  test_expression_simplifier.py  test_serialization.py  test_symbol_library.py  test_types.py
(+115 files in other folders)
