[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["SRToolkit*"]

[project]
name = "symbolic-regression-toolkit"
version = "1.3.3"
description = "Symbolic Regression/Equation Discovery Toolkit"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-only"}
authors = [
  { name = "Sebastian Mežnar", email = "smeznar@gmail.com" }
]
keywords = [
  "symbolic regression",
  "equation discovery",
  "parameter estimation",
  "machine learning"
]
dependencies = [
  "numpy",
  "scipy",
  "sympy",
  "nltk"
]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/smeznar/SymbolicRegressionToolkit"
Documentation = "https://smeznar.github.io/SymbolicRegressionToolkit/"
