[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["SRToolkit*"]

[tool.setuptools.package-data]
SRToolkit = ["py.typed"]

[project]
name = "symbolic-regression-toolkit"
version = "1.5.0"
description = "Symbolic Regression/Equation Discovery Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [
  { name = "Sebastian Mežnar", email = "smeznar@gmail.com" }
]
keywords = [
  "symbolic regression",
  "equation discovery",
  "parameter estimation",
  "machine learning"
]
dependencies = [
  "numpy>=2.0",
  "scipy",
  "sympy",
  "nltk",
  "zss",
  "editdistance",
  "tqdm",
  "typing_extensions>=4.0",
  "platformdirs"
]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.optional-dependencies]
approaches = ["torch>=2.0", "tqdm", "pymoo"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pre-commit"]

[project.urls]
Homepage = "https://github.com/smeznar/SymbolicRegressionToolkit"
Documentation = "https://smeznar.github.io/SymbolicRegressionToolkit/"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=SRToolkit/approaches/EDHiE.py --cov-report=term-missing"
doctest_optionflags = ["NORMALIZE_WHITESPACE"]
testpaths = ["SRToolkit", "tests"]
markers = [
    "benchmark: tests requiring downloaded benchmark data (run with: pytest tests/)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "NPY201"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["SRToolkit"]